[gd_scene load_steps=4 format=3 uid="uid://ct5gwr450y1p8"]

[ext_resource type="Texture2D" uid="uid://db51yp3hn5c3s" path="res://Assets/Upgrade Assets/Upgrade Icons/Upgrade 3 v4.png" id="1_x5dub"]
[ext_resource type="Script" path="res://Scripts/score_multiplier.gd" id="2_rvpb5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7fwt8"]
size = Vector2(870, 850)

[node name="BetterHeals" type="Sprite2D" groups=["Better Heals", "Upgrades"]]
scale = Vector2(0.1, 0.1)
texture = ExtResource("1_x5dub")
script = ExtResource("2_rvpb5")
upgradeNumber = 3

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="JuiceTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_7fwt8")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="JuiceTimer" to="." method="_on_juice_timer_timeout"]
